<resources>
    <string name="app_name">CoreTagger</string>
    <string name="action_settings">Settings</string>
    <string name="mode_summary">Turn on for lab tagging, off for field</string>
    <string name="mode_title">Lab tagging mode</string>
    <string name="about">About</string>
    <string name="projectcsj">Project CSJ</string>
    <string name="csj_summary">9-digit project control section job number</string>
    <string name="tagger">Tagger</string>
    <string name="tagger_summary">Tagger\'s name</string>
    <string name="datetime">Date/Time</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="rfidtag">RFID #</string>
    <string name="projectlot">Lot #</string>
    <string name="projectsublot">Sublot #</string>
    <string name="corenumber">Core #</string>
    <string name="hint_csj">9 chars without dashes</string>
    <string name="hint_lot">enter nbr between 1-100</string>
    <string name="hint_sublot">enter nbr between 1-4</string>
    <string name="hint_core">enter nbr between 1-2</string>
    <string name="save">Save</string>
    <string name="scan">Scan</string>
    <string name="scantag">scan the tag</string>
    <string name="upload">Upload</string>
    <string name="refresh">Refresh</string>
    <string name="dummy">Dummy</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="core_id">Core ID</string>
    <string name="validate">Validate</string>
    <string name="newcore">New</string>
    <string name="cancel">Cancel</string>
    <string name="inspector">Inspector</string>
    <string name="office">Office</string>
    <string name="office_summary">Lab/Division/Branch name</string>
    <string name="comment">Comment</string>
    <string name="any_comments">any comments?</string>
</resources>
