<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="andre.smit.coretagger.ValidateActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblView6"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/core_id"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/lblCoreID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblView0"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/tagger"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
        <!--android:text="Inspector:"-->
        <TextView
            android:id="@+id/lblTagger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblView5"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/office"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
        <!--android:text="Inspector:"-->
        <TextView
            android:id="@+id/lblOffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblView1"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/datetime"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
        <!--android:text="Date/Time:"-->
        <TextView
            android:id="@+id/lblDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:id="@+id/lblView2"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/longitude"-->
            <!--android:textStyle="bold"-->
            <!--tools:layout_editor_absoluteX="8dp"-->
            <!--tools:layout_editor_absoluteY="0dp" />-->
        <!--&lt;!&ndash;android:text="Longitude"&ndash;&gt;-->
        <!--<TextView-->
            <!--android:id="@+id/lblLon"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--tools:layout_editor_absoluteX="8dp"-->
            <!--tools:layout_editor_absoluteY="0dp" />-->
    <!--</LinearLayout>-->

    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->

        <!--<TextView-->
            <!--android:id="@+id/lblView3"-->
            <!--android:layout_width="80dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/latitude"-->
            <!--android:textStyle="bold"-->
            <!--tools:layout_editor_absoluteX="8dp"-->
            <!--tools:layout_editor_absoluteY="0dp" />-->
        <!--&lt;!&ndash;android:text="Latitude:"&ndash;&gt;-->
        <!--<TextView-->
            <!--android:id="@+id/lblLat"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--tools:layout_editor_absoluteX="8dp"-->
            <!--tools:layout_editor_absoluteY="0dp" />-->
    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblView4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/rfidtag"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
        <!--android:text="RFID Tag:"-->
        <EditText
            android:id="@+id/txtTag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/scantag"
            android:inputType="text"
            android:maxLines="1"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>
    <!--android:inputType="number"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblView7"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
        <!--android:text="RFID Tag:"-->
        <EditText
            android:id="@+id/txtComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/any_comments"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="0dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="endThis"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btnInfo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="getInfo"
            android:text="@string/info" />

        <Button
            android:id="@+id/btnValidate"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="validateCore"
            android:text="@string/validate" />

    </LinearLayout>

</LinearLayout>
